TAMBAHAN EXPERIENCE DAN pendidikan

--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
                     <!-- Arduino -->
                     <div class="p-4 bg-darkcard rounded-lg shadow-lg">
                         <i class="fas fa-microchip text-gray-300 text-3xl"></i>
-                        <h4 class="mt-2 text-xl font-semibold">Arduino</h4>
+                        <h4 class="mt-2 text-xl font-semibold">Embedded System</h4>
                         <p class="text-sm">Pemrograman mikrokontroler dan pengembangan sistem IoT.</p>
                     </div>
 
@@ -678,6 +678,23 @@
             </div>
             
             <div class="relative timeline">
+                 <!-- Education 1 -->
+                <div class="relative flex flex-col md:flex-row items-center mb-16">
+                    <div class="md:w-1/2 md:pr-12 mb-6 md:mb-0 md:text-right">
+                        <h3 class="text-xl font-semibold mb-2">Lab Assistant</h3>
+                        <h3 class="text-xl font-semibold mb-2">Pusat Studi Multimedia dan Robotika</h3>
+
+                        <p class="text-cyberblue mb-2">Universitas Gunadarma</p>
+                        <p class="text-gray-400">2025 - Present</p>
+                    </div>
+                    <div class="timeline-dot"></div>
+                    <div class="md:w-1/2 md:pl-12">
+                        <p>
+                            Berperan aktif dalam mendukung kegiatan praktikum, pengembangan proyek berbasis mikrokontroller (seperti Arduino UNO, raspberry pi, ESP32, dll). Selain itu juga terlibat dalam pelatihan internal, pengujian alat, hingga asistensi mahasiswa dalam menyelesaikan tugas akhir atau proyek penelitian.
+                        </p>
+                    </div>
+                </div>
+
                 <!-- Education 1 -->
                 <div class="relative flex flex-col md:flex-row items-center mb-16">
                     <div class="md:w-1/2 md:pr-12 mb-6 md:mb-0 md:text-right">
