tambahan my activiy

--- a/index.html
+++ b/index.html
@@ -463,10 +463,10 @@
     <section id="projects" class="py-20 bg-darkcard">
         <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="text-center mb-16">
-                <h2 class="text-3xl md:text-4xl font-bold mb-4 gradient-text">My Projects</h2>
+                <h2 class="text-3xl md:text-4xl font-bold mb-4 gradient-text">My Activity</h2>
                 <div class="w-20 h-1 bg-gradient-to-r from-cyberblue to-cyberpurple mx-auto mb-6"></div>
                 <p class="text-xl max-w-3xl mx-auto">
-                    Kumpulan proyek yang telah saya selesaikan maupun yang sedang saya kerjakan
+                    Kumpulan proyek dan kegiatan yang telah saya selesaikan maupun yang sedang saya kerjakan
                 </p>
             </div>
             
@@ -474,7 +474,7 @@
                 <!-- Project 1 -->
                 <div class="bg-darkbg rounded-lg overflow-hidden project-card cyber-border">
                     <div class="relative overflow-hidden h-48">
-                        <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" 
+                        <img src="https://media.licdn.com/dms/image/v2/D4E22AQHl6-2eF5Okbg/feedshare-shrink_2048_1536/B4EZhLRjBeHoAs-/0/1753609557194?e=1757548800&v=beta&t=bUmK_o1ITUD-aMc35jIdQGev69ClvmH2U6RkDCMyJqs" 
                              alt="Project 1" 
                              class="w-full h-full object-cover transition-transform duration-500 hover:scale-110">
                         <div class="absolute inset-0 bg-gradient-to-t from-black to-transparent opacity-70"></div>
@@ -504,7 +504,7 @@
                 <!-- Project 2 -->
                 <div class="bg-darkbg rounded-lg overflow-hidden project-card cyber-border">
                     <div class="relative overflow-hidden h-48">
-                        <img src="https://plus.unsplash.com/premium_photo-1726754457459-d2dfa2e3a434?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                        <img src="https://media.licdn.com/dms/image/v2/D4E22AQHga1abTUR2Gw/feedshare-shrink_2048_1536/B4EZg6EO3BHgAo-/0/1753320847760?e=1757548800&v=beta&t=yFAZh5qvAgEpNuv9NkBgjlFVdNhSI1aLoYpsu-uoiLg"
                              alt="Project 2" 
                              class="w-full h-full object-cover transition-transform duration-500 hover:scale-110">
                         <div class="absolute inset-0 bg-gradient-to-t from-black to-transparent opacity-70"></div>
@@ -535,7 +535,7 @@
                 <!-- Project 3 -->
                 <div class="bg-darkbg rounded-lg overflow-hidden project-card cyber-border">
                     <div class="relative overflow-hidden h-48">
-                        <img src="https://plus.unsplash.com/premium_photo-1685086785077-ff65bf749544?q=80&w=1932&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Deskripsi Gambar" /> 
+                        <img src="https://media.licdn.com/dms/image/v2/D4E2DAQFFUWZom8FV4g/profile-treasury-image-shrink_800_800/B4EZYaxHO9HgAY-/0/1744205813229?e=1755183600&v=beta&t=7JK37RPYMsiSiPqUe-CqIJ_7PtBUHSz_YEe9TCdH5eg"
                              alt="Project 3" 
                              class="w-full h-full object-cover transition-transform duration-500 hover:scale-110">
                         <div class="absolute inset-0 bg-gradient-to-t from-black to-transparent opacity-70"></div>
@@ -565,7 +565,7 @@
                 <!-- Project 4 -->
                 <div class="bg-darkbg rounded-lg overflow-hidden project-card cyber-border">
                     <div class="relative overflow-hidden h-48">
-                        <img src="https://media.licdn.com/dms/image/v2/D4E22AQH5eMmCqoaVvA/feedshare-shrink_800/B4EZWtP6ozHUAg-/0/1742368391116?e=1748476800&v=beta&t=JY-LzLmFQGGDk4cnq7E88bgtWlfiflL-PVYRGXTACWQ" 
+                        <img src="https://media.licdn.com/dms/image/v2/D4E22AQH5eMmCqoaVvA/feedshare-shrink_2048_1536/B4EZWtP6ozHUAo-/0/1742368391245?e=1757548800&v=beta&t=59K_LHyLxNx3DlXpAMzcNsSf4tnI8EsEvPsRt3Nmjr8" 
                              alt="Project 4" 
                              class="w-full h-full object-cover transition-transform duration-500 hover:scale-110">
                         <div class="absolute inset-0 bg-gradient-to-t from-black to-transparent opacity-70"></div>
@@ -594,7 +594,7 @@
                     </div>
                 </div>
                  <!-- Project 5-->
-                 <div class="bg-darkbg rounded-lg overflow-hidden project-card cyber-border">
+                 <!--<div class="bg-darkbg rounded-lg overflow-hidden project-card cyber-border">
                     <div class="relative overflow-hidden h-48">
                         <img src="https://images.unsplash.com/photo-1580927752452-89d86da3fa0a?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"  
                         alt="Game Development" 
@@ -626,7 +626,7 @@
                     </div>
                 </div>
                  <!-- Project 6 -->
-                 <div class="bg-darkbg rounded-lg overflow-hidden project-card cyber-border">
+                 <!--<div class="bg-darkbg rounded-lg overflow-hidden project-card cyber-border">
                     <div class="relative overflow-hidden h-48">
                         <img src="https://images.unsplash.com/photo-1607706189992-eae578626c86?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"  
                         alt="Game Development" 
@@ -654,7 +654,7 @@
                             </a>
                         </div>
                     </div>
-                </div>
+                </div>-->
             </div>
             
             <div class="text-center mt-12">
