--- a/index.html
+++ b/index.html
@@ -594,7 +594,7 @@
                     </div>
                 </div>
                  <!-- Project 5-->
-                 <!--<div class="bg-darkbg rounded-lg overflow-hidden project-card cyber-border">
+                 <div class="bg-darkbg rounded-lg overflow-hidden project-card cyber-border">
                     <div class="relative overflow-hidden h-48">
                         <img src="https://images.unsplash.com/photo-1580927752452-89d86da3fa0a?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"  
                         alt="Game Development" 
@@ -626,7 +626,7 @@
                     </div>
                 </div>
                  <!-- Project 6 -->
-                 <!--<div class="bg-darkbg rounded-lg overflow-hidden project-card cyber-border">
+                 <div class="bg-darkbg rounded-lg overflow-hidden project-card cyber-border">
                     <div class="relative overflow-hidden h-48">
                         <img src="https://images.unsplash.com/photo-1607706189992-eae578626c86?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"  
                         alt="Game Development" 
@@ -654,7 +654,7 @@
                             </a>
                         </div>
                     </div>
-                </div>-->
+                </div>
             </div>
             
             <div class="text-center mt-12">
