penambahan projek deskripsi

--- a/index.html
+++ b/index.html
@@ -480,12 +480,12 @@
                         <div class="absolute inset-0 bg-gradient-to-t from-black to-transparent opacity-70"></div>
                         <div class="absolute bottom-0 left-0 p-6">
                             <h3 class="text-xl font-bold text-white">Back-end Development</h3>
-                            <p class="text-cyberblue">Menu sistem antarmuka ATM</p>
+                            <p class="text-cyberblue">Sistem Monitoring dan Kontrol Smart GreenHouse</p>
                         </div>
                     </div>
                     <div class="p-6">
                         <p class="mb-4">
-                            Sebuah sistem simulasi transaksi perbankan berbasis Python yang memungkinkan pengguna melakukan transfer dana, pembayaran tagihan, pembelian pulsa, penarikan tunai, serta pengecekan saldo dengan mekanisme yang aman dan terstruktur.
+                            Sebuah sistem otomatisasi rumah kaca berbasis mikrokontroler ESP32 yang dapat memantau serta mengontrol kondisi lingkungan secara real-time. Sistem ini memungkinkan pengukuran suhu, kelembaban, dan Kelembapan tanah menggunakan sensor DHT11 dan Soil Mouisture. Selain itu, sistem juga mengatur penyiraman otomatis dan ventilasi berdasarkan parameter yang telah ditentukan, guna menciptakan lingkungan optimal bagi pertumbuhan tanaman.
                         </p>
                         <div class="flex flex-wrap gap-2">
                             <span class="bg-gray-800 text-cyberblue text-xs px-3 py-1 rounded-full">Python</span> <!--kalo mau nambah salin aja-->
