--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                         <div class="w-64 h-64 md:w-80 md:h-80 bg-cyberblue rounded-full absolute -top-10 -left-10 opacity-20"></div>
                         <div class="w-64 h-64 md:w-80 md:h-80 bg-cyberpink rounded-full absolute -bottom-10 -right-10 opacity-20"></div>
                         <div class="relative z-10 w-64 h-64 md:w-80 md:h-80 overflow-hidden rounded-lg cyber-border floating">
-                            <img src="D:\GALIH_DIAN\Foto Galih\Foto_edit2.jpg" alt="Profile" class="w-full h-full object-cover">
+                            <img src="https://media.licdn.com/dms/image/v2/D4E03AQECnib23ISWAQ/profile-displayphoto-shrink_800_800/B4EZWQW6z.HcAg-/0/1741883683154?e=1757548800&v=beta&t=7DjIMNuZWE8HTbXuYNmTEcEsJjUBY33kxVOsRnpXP9I" alt="Profile" class="w-full h-full object-cover">
                         </div>
                     </div>
                 </div>
